--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "ZaqApp - PWA Test App",
+  "name": "maybelin - PWA Test App",
   "short_name": "ZaqApp",
   "description": "This is a pwa simple app",
   "start_url": "./",
